@@ -1,5 +1,6 @@
 package com.moneyme.moneymebackend.service;
 
+import com.moneyme.moneymebackend.accessor.AuthUserAccessor;
 import com.moneyme.moneymebackend.accessor.GroupAccessor;
 import com.moneyme.moneymebackend.accessor.LoanAccessor;
 import com.moneyme.moneymebackend.accessor.ObligationAccessor;
@@ -10,13 +11,12 @@ import com.moneyme.moneymebackend.dto.request.CreateGroupRequest;
 import com.moneyme.moneymebackend.dto.request.JoinGroupRequest;
 import com.moneyme.moneymebackend.dto.response.GetGroupListResponse;
 import com.moneyme.moneymebackend.dto.response.GroupDetailsResponse;
+import com.moneyme.moneymebackend.entity.AuthUserEntity;
 import com.moneyme.moneymebackend.entity.GroupEntity;
-import com.moneyme.moneymebackend.entity.LoanEntity;
-import com.moneyme.moneymebackend.entity.ObligationEntity;
-import com.moneyme.moneymebackend.entity.RepaymentEntity;
 import com.moneyme.moneymebackend.entity.UserEntity;
 import com.moneyme.moneymebackend.entity.UserGroupEntity;
 import jakarta.transaction.Transactional;
+import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -27,133 +27,121 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Data
 @Service
 @RequiredArgsConstructor
 public class GroupService {
     private final GroupAccessor accessor;
     private final UserAccessor userAccessor;
+    private final AuthUserAccessor authUserAccessor;
     private final UserGroupAccessor userGroupAccessor;
     private final RepaymentAccessor repaymentAccessor;
     private final LoanAccessor loanAccessor;
     private final ObligationAccessor obligationAccessor;
 
-    public GroupDetailsResponse getGroupInfo(UUID groupId) {
+    public GroupDetailsResponse getGroupInfo(String uid, UUID groupId) {
         List<UserGroupEntity> userGroups = userGroupAccessor.findByGroupUuid(groupId);
+        if (userGroups.size() == 0) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Group Not Found with: " + groupId);
+        }
+
         List<UserEntity> users = userGroups.stream().map(UserGroupEntity::getUser).collect(Collectors.toList());
         GroupEntity groupEntity = userGroups.stream().map(UserGroupEntity::getGroup).toList().get(0);
 
         return GroupDetailsResponse.from(users, groupEntity);
     }
 
-    public GetGroupListResponse getGroupList(UUID userId) {
-        List<UserGroupEntity> userGroups = userGroupAccessor.findByUserUuid(userId);
+    public GetGroupListResponse getGroupList(String uid) {
+        List<UserEntity> userEntityList = userAccessor.findByAuthUserUid(uid);
 
-        if (userGroups.size() == 0) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "UserGroups not found with user id: " + userId);
-        }
+        List<UUID> uuidList = userEntityList.stream().map(UserEntity::getUuid).toList();
+        List<UserGroupEntity> userGroupEntityList = userGroupAccessor.findByUserUuidList(uuidList);
 
-        List<GroupEntity> groupEntityList = userGroups.stream().map(UserGroupEntity::getGroup).toList();
+        List<GroupEntity> groupEntityList = userGroupEntityList.stream().map(UserGroupEntity::getGroup).toList();
 
         return GetGroupListResponse.from(groupEntityList);
     }
 
     @Transactional
-    public GroupDetailsResponse createGroup(CreateGroupRequest request) {
-        List<UserGroupEntity> userGroupEntityList = userGroupAccessor.findByUserUuid(UUID.fromString(request.getHostUuid()));
-        if (userGroupEntityList.size() >= 5) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "User can't join more than 5 groups");
-        }
+    public GroupDetailsResponse createGroup(String uid, CreateGroupRequest request) {
+        // validation to check if exceeds max group count(=how many users are linked with auth_user)
+        validateMaxGroupCount(uid);
 
-        GroupEntity group = GroupEntity.builder()
+        // Create new record into groups table.
+        GroupEntity groupEntity = GroupEntity.builder()
                 .uuid(UUID.randomUUID())
                 .name(request.getGroupName())
                 .joinToken(UUID.randomUUID())
                 .build();
-        GroupEntity savedGroup = accessor.save(group);
+        GroupEntity groupEntitySaved = accessor.save(groupEntity);
 
-        UserEntity user = userAccessor.findById(UUID.fromString(request.getHostUuid()));
-
+        // Create new records into users table
+        AuthUserEntity authUser = authUserAccessor.findByUid(uid);
         List<UserEntity> userEntityList = new ArrayList<>();
-        userEntityList.add(user);
-        createUserGroup(user, savedGroup);
 
+        UserEntity host = UserEntity.builder()
+                .uuid(UUID.randomUUID())
+                .name(request.getHostName())
+                .authUser(authUser)
+                .build();
+        userEntityList.add(host);
         request.getParticipantsName().forEach(userName -> {
-            if(userName.equals(user.getName())) {
-                return;
-            }
-            UserEntity noAuthUser = UserEntity.builder()
+            UserEntity user = UserEntity.builder()
                     .uuid(UUID.randomUUID())
                     .name(userName)
                     .build();
-            UserEntity noAuthUserSaved = userAccessor.save(noAuthUser);
-            createUserGroup(noAuthUserSaved, savedGroup);
-            userEntityList.add(noAuthUserSaved);
+            userEntityList.add(user);
         });
+        List<UserEntity> userEntityListSaved = userAccessor.saveAll(userEntityList);
 
-        return GroupDetailsResponse.from(userEntityList, savedGroup);
+        // Create new records into user_groups table
+        List<UserGroupEntity> userGroupEntityList = new ArrayList<>();
+        userEntityListSaved.forEach(userEntity -> {
+            UserGroupEntity userGroupEntity = UserGroupEntity.builder()
+                    .userUuid(userEntity.getUuid())
+                    .groupUuid(groupEntitySaved.getUuid())
+                    .user(userEntity)
+                    .group(groupEntitySaved)
+                    .build();
+            userGroupEntityList.add(userGroupEntity);
+        });
+        userGroupAccessor.saveAll(userGroupEntityList);
+
+        return GroupDetailsResponse.from(userEntityListSaved, groupEntitySaved);
     }
 
     @Transactional
-    public GroupDetailsResponse joinGroup(JoinGroupRequest request, UUID groupId, String token) {
-        List<UserGroupEntity> userGroupEntityList2 = userGroupAccessor.findByUserUuid(UUID.fromString(request.getActualUserId()));
-        if (userGroupEntityList2.size() >= 5) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "User can't join more than 5 groups");
+    public GroupDetailsResponse joinGroupInvited(JoinGroupRequest request, UUID groupId, String uid) {
+        // check if token is valid or not
+        GroupEntity groupEntity = accessor.findById(groupId);
+        if (!groupEntity.getJoinToken().equals(request.getJoinToken())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Invalid join token: " + request.getJoinToken());
         }
 
+        // Check if user has already joined this group.
         List<UserGroupEntity> userGroupEntityList = userGroupAccessor.findByGroupUuid(groupId);
+        boolean exists = userGroupEntityList.stream()
+                .anyMatch(userGroupEntity -> {
+                    AuthUserEntity authUser = userGroupEntity.getUser().getAuthUser();
+                    return authUser != null && uid.equals(authUser.getUid());
+                });
 
-        long emptyUserEntityCount = userGroupEntityList.stream()
-                .filter(userGroupEntity -> userGroupEntity.getUser().getUid() == null)
-                .count();
-
-        if (emptyUserEntityCount == 0) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "The group is full");
+        if (exists) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "You have already joined this group");
         }
 
-        UUID tmpUserId = UUID.fromString(request.getTmpUserId());
-        UUID actualUserId = UUID.fromString(request.getActualUserId());
+        // validation to check if exceeds max group count(=how many users are linked with auth_user)
+        validateMaxGroupCount(uid);
 
-        userGroupAccessor.delete(tmpUserId, groupId);
+        // Update users.auth_user_uid to link authUser and user
+        UserEntity userEntity = userAccessor.findById(request.getUserUuid());
+        AuthUserEntity authUserEntity = authUserAccessor.findByUid(uid);
+        userEntity.setAuthUser(authUserEntity);
+        userAccessor.save(userEntity);
 
-        GroupEntity group = accessor.findById(groupId);
-        UserEntity actualUser = userAccessor.findById(actualUserId);
-        createUserGroup(actualUser, group);
-
-        // repayment, loanの修正が必要
-        List<RepaymentEntity> repaymentList = repaymentAccessor.findByGroupId(groupId);
-        for (RepaymentEntity repayment : repaymentList) {
-            if (repayment.getPayer().getUuid().equals(tmpUserId)) {
-                repayment.setPayer(actualUser);
-            }
-
-            if (repayment.getRecipientUser().getUuid().equals(tmpUserId)) {
-                repayment.setRecipientUser(actualUser);
-            }
-
-            repaymentAccessor.save(repayment);
-        }
-
-        List<ObligationEntity> obligationList = obligationAccessor.findByGroupId(groupId);
-        for (ObligationEntity obligation : obligationList) {
-            if (obligation.getUser().getUuid().equals(tmpUserId)) {
-                obligation.setUser(actualUser);
-            }
-            obligationAccessor.save(obligation);
-        }
-
-        List<LoanEntity> loanList = loanAccessor.findByGroupId(groupId);
-        for (LoanEntity loan : loanList) {
-            if (loan.getPayer().getUuid().equals(tmpUserId)) {
-                loan.setPayer(actualUser);
-            }
-
-            loanAccessor.save(loan);
-        }
-
-        List<UserGroupEntity> updatedUserGroupList = userGroupAccessor.findByGroupUuid(groupId);
-
-        List<UserEntity> users = updatedUserGroupList.stream().map(UserGroupEntity::getUser).collect(Collectors.toList());
-        GroupEntity groupEntity = updatedUserGroupList.stream().map(UserGroupEntity::getGroup).toList().get(0);
+        // Build response
+        // Check if user has already in the group requested.
+        List<UserEntity> users = userGroupEntityList.stream().map(UserGroupEntity::getUser).collect(Collectors.toList());
 
         return GroupDetailsResponse.from(users, groupEntity);
     }
@@ -166,5 +154,13 @@ public class GroupService {
                 .group(group)
                 .build();
         userGroupAccessor.save(userGroup);
+    }
+
+    @Transactional
+    private void validateMaxGroupCount(String uid) {
+        List<UserEntity> userEntityList = userAccessor.findByAuthUserUid(uid);
+        if (userEntityList.size() >= 5) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "User can't join more than 6 groups");
+        }
     }
 }
